@@ -4,13 +4,13 @@
 // Keep somewhat in sync with
 // ../defaultsPersist/Driver.java and ../PersistUtil.
 
+import com.sun.tools.classfile.Annotation;
+import com.sun.tools.classfile.ClassFile;
 import java.io.PrintStream;
 import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
-import java.lang.classfile.Annotation;
-import java.lang.classfile.ClassModel;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.List;
@@ -26,7 +26,7 @@ public class Driver {
     }
     String name = args[0];
     Class<?> clazz = Class.forName(name);
-    new Driver().runDriver(clazz.newInstance());
+    new Driver().runDriver(clazz.getDeclaredConstructor().newInstance());
   }
 
   protected void runDriver(Object object) throws Exception {
@@ -48,8 +48,8 @@ public class Driver {
       try {
         String compact = (String) method.invoke(object);
         String fullFile = PersistUtil.wrap(compact);
-        ClassModel cm = PersistUtil.compileAndReturn(fullFile, testClass);
-        List<Annotation> actual = ReferenceInfoUtil.extendedAnnotationsOf(cm);
+        ClassFile cf = PersistUtil.compileAndReturn(fullFile, testClass);
+        List<Annotation> actual = ReferenceInfoUtil.extendedAnnotationsOf(cf);
         String diagnostic =
             String.join(
                 "; ",
@@ -57,7 +57,7 @@ public class Driver {
                 "compact=" + compact,
                 "fullFile=" + fullFile,
                 "testClass=" + testClass);
-        ReferenceInfoUtil.compare(expected, actual, diagnostic);
+        ReferenceInfoUtil.compare(expected, actual, cf, diagnostic);
         out.println("PASSED:  " + method.getName());
         ++passed;
       } catch (Throwable e) {
